globus-xio-gridftp-driver (2.10-2+gt6.@distro@) @distro@; urgency=low

  * Fix tests jessie pbuilder

 -- Globus Toolkit <support@globus.org>  Thu, 16 Apr 2015 10:58:58 -0400

globus-xio-gridftp-driver (2.10-2+gt6.@distro@) @distro@; urgency=low

  * Fix tests on static builds

 -- Globus Toolkit <support@globus.org>  Mon, 12 Jan 2015 15:03:14 -0500

globus-xio-gridftp-driver (2.9-2+gt6.@distro@) @distro@; urgency=low

  * Fix tests on static builds

 -- Globus Toolkit <support@globus.org>  Mon, 12 Jan 2015 13:19:42 -0500

globus-xio-gridftp-driver (2.8-2+gt6.@distro@) @distro@; urgency=low

  * Add OpenSSL build dependency

 -- Globus Toolkit <support@globus.org>  Tue, 04 Nov 2014 09:14:51 -0500

globus-xio-gridftp-driver (2.8-1+gt6.@distro@) @distro@; urgency=low

  * Metadata version out of sync

 -- Globus Toolkit <support@globus.org>  Tue, 30 Sep 2014 08:53:35 -0400

globus-xio-gridftp-driver (2.7-2+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Replace some old GLOBUS_NULL values with NULL

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 14:59:01 -0400

globus-xio-gridftp-driver (2.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-xio-gridftp-driver (2.6-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-xio-gridftp-driver (2.6-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-xio-gridftp-driver (2.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:38 -0400

globus-xio-gridftp-driver (2.5-1+gt6.@distro@) @distro@; urgency=low

  * Don't version dynamic module
