@@ -1,6 +1,6 @@
 Name: globus-xio-gridftp-driver
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_xio_gridftp_driver-2.10.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_xio_gridftp_driver-2.11.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
